--- a/config/database.yml
+++ b/config/database.yml
@@ -48,7 +48,7 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: zaiko_production
-  username: zaiko
-  password: <%= ENV['ZAIKO_DATABASE_PASSWORD'] %>
+<<: *default
+adapter: postgresql
+encoding: unicode
+pool: 5
